--- a/templates/VehicleInspectionStatus.html
+++ b/templates/VehicleInspectionStatus.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../static/assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="../static/assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="../static/assets/fonts/fontawesome5-overrides.min.css">
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/table.css">
 </head>
 
 <body id="page-top">
