--- a/templates/DriverScoreboard.html
+++ b/templates/DriverScoreboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Dashboard - Brand</title>
+    <title>Dashboard - Toyota Tsusho India Pvt. Ltd.</title>
     <link rel="stylesheet" href="../static/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
     <link rel="stylesheet" href="../static/assets/fonts/fontawesome-all.min.css">
@@ -22,7 +22,7 @@
                 </a>
                 <hr class="sidebar-divider my-0">
                 <ul class="navbar-nav text-light" id="accordionSidebar">
-                    <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-tachometer-alt" style="color: rgb(255,255,255);"></i><span>Dashboard</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="/home"><i class="fas fa-tachometer-alt" style="color: rgb(255,255,255);"></i><span>Dashboard</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="/fuel"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" class="bi bi-droplet-fill">
                                 <path fill-rule="evenodd" d="M8 16a6 6 0 0 0 6-6c0-1.655-1.122-2.904-2.432-4.362C10.254 4.176 8.75 2.503 8 0c0 0-6 5.686-6 10a6 6 0 0 0 6 6zM6.646 4.646c-.376.377-1.272 1.489-2.093 3.13l.894.448c.78-1.559 1.616-2.58 1.907-2.87l-.708-.708z"></path>
                             </svg><span>&nbsp;Fuel Management</span></a><a class="nav-link" href="/vehistat"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" class="bi bi-graph-up" style="background: rgba(255,255,255,0);color: rgb(255,255,255);border-color: rgb(255,255,255);">
@@ -122,11 +122,7 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="index.html" style="border-color: var(--bs-blue);"><button class="btn btn-primary" type="button" style="background: rgb(0,48,88);border-color: var(--bs-blue);">Sign Out</button></a>
-                                    <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
-                                        <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
-                                    </div>
-                                </div>
+                                <div class="nav-item"><a class="dropdown-toggle nav-link" href="/" style="border-color: var(--bs-blue);"><button class="btn btn-primary" type="button" style="background: rgb(0,48,88);border-color: var(--bs-blue);">Sign Out</button></a>
                             </li>
                         </ul>
                     </div>
