--- a/templates/fuel.html
+++ b/templates/fuel.html
@@ -131,7 +131,7 @@
                         <h4 class="text-dark mb-0"><strong>Fuel Management</strong></h4>
                     </div>
                     <iframe width="1180" height="600"
-				src="https://app.powerbi.com/reportEmbed?reportId=7886b293-f905-4dda-9f38-eed66cf3bc73&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D&filterPaneEnabled=false&navContentPaneEnabled=false"
+				src="https://app.powerbi.com/reportEmbed?reportId=7886b293-f905-4dda-9f38-eed66cf3bc73&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtaC1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9&filterPaneEnabled=false&navContentPaneEnabled=false"
 				frameborder="0" allowFullScreen="true"></iframe>
                 </div>
             </div>
