--- a/templates/DriverScoreboard.html
+++ b/templates/DriverScoreboard.html
@@ -189,7 +189,7 @@
                 <div class="d-sm-flex justify-content-between align-items-center mb-4">
                     <h4 class="text-dark mb-0"><strong>Scoreboard Parameters</strong></h4>
                 </div>
-                <iframe width="1180" height="425" src="https://app.powerbi.com/reportEmbed?reportId=3f0bba5b-caa7-4b0c-acb9-ee628b0776f3&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D&filterPaneEnabled=false&navContentPaneEnabled=false" frameborder="0" allowFullScreen="true"></iframe>
+                <iframe width="1180" height="425" src="https://app.powerbi.com/reportEmbed?reportId=3f0bba5b-caa7-4b0c-acb9-ee628b0776f3&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtaC1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9&filterPaneEnabled=false&navContentPaneEnabled=false" frameborder="0" allowFullScreen="true"></iframe>
             </div>
             <footer class="bg-white sticky-footer">
                 <div class="container my-auto">
