--- a/templates/FleetCostManagement.html
+++ b/templates/FleetCostManagement.html
@@ -130,7 +130,7 @@
                     <div class="d-sm-flex justify-content-between align-items-center mb-4">
                         <h4 class="text-dark mb-0"><strong>Fleet Cost Management</strong></h4>
                     </div>
-                    <iframe width="1180" height="600" src="https://app.powerbi.com/reportEmbed?reportId=344bbb73-a470-45a1-8507-8d7023ea86ea&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D&filterPaneEnabled=false&navContentPaneEnabled=false" frameborder="0" allowFullScreen="true"></iframe>
+                    <iframe width="1180" height="600" src="https://app.powerbi.com/reportEmbed?reportId=344bbb73-a470-45a1-8507-8d7023ea86ea&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtaC1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9&filterPaneEnabled=false&navContentPaneEnabled=false" frameborder="0" allowFullScreen="true"></iframe>
                 </div>
             </div>
             <footer class="bg-white sticky-footer">
