--- a/templates/MaintenanceStatus.html
+++ b/templates/MaintenanceStatus.html
@@ -131,7 +131,7 @@
                         <h4 class="text-dark mb-0"><strong>Maintenance Status</strong></h4>
                     </div>
                     <iframe width="1180" height="600"
-                src="https://app.powerbi.com/reportEmbed?reportId=87d50604-80a2-4456-a0f6-cbf83cbb020b&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D&filterPaneEnabled=false&navContentPaneEnabled=false"
+                src="https://app.powerbi.com/reportEmbed?reportId=87d50604-80a2-4456-a0f6-cbf83cbb020b&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtaC1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9&filterPaneEnabled=false&navContentPaneEnabled=false"
                 frameborder="0" allowFullScreen="true"></iframe>
                 </div>
             </div>
