--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
                         <h4 class="text-dark mb-0"><strong>Dashboard</strong></h4>
                     </div>
                     <iframe width="1180" height="600"
-				src="https://app.powerbi.com/reportEmbed?reportId=80fd16cb-57df-44f1-8836-de39f8dac111&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQvIn0%3D&filterPaneEnabled=false&navContentPaneEnabled=false"
+				src="https://app.powerbi.com/reportEmbed?reportId=80fd16cb-57df-44f1-8836-de39f8dac111&autoAuth=true&ctid=d4963ce2-af94-4122-95a9-644e8b01624d&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXVzLW5vcnRoLWNlbnRyYWwtaC1wcmltYXJ5LXJlZGlyZWN0LmFuYWx5c2lzLndpbmRvd3MubmV0LyJ9&filterPaneEnabled=false&navContentPaneEnabled=false"
 				frameborder="0" allowFullScreen="true"></iframe>
                 </div>
             </div>
